Remove white-space: nowrap from poi-table-name to fix long title overflow

--- a/static/css/world66.css
+++ b/static/css/world66.css
@@ -895,7 +895,6 @@ img { max-width: 100%; height: auto; }
 .poi-table-name {
   width: 30%;
   font-weight: bold;
-  white-space: nowrap;
 }
 
 .poi-table-name a {
